5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_1802.log
== SUBMITION (2019-04-02 00:21:16) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2//3)
dano = int(f)
Print(vida - dano)
-- EXECUTION TIME:
0.196922
-- ERROR:
  File "/home/codebench/codes/1593/1802/main.py", line 6
    dano = int(f)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:21:27) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
dano = int(f)
Print(vida - dano)
-- EXECUTION TIME:
0.195856
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1802/main.py", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
NameError: name 'sqtr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:29) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
dano = int(f)
Print(vida - dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
NameError: name 'sqtr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:21:30) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
dano = int(f)
Print(vida - dano)
-- EXECUTION TIME:
0.148225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1802/main.py", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
NameError: name 'sqtr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:21:41) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
dano = int(f)
print(vida - dano)
-- EXECUTION TIME:
0.182911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1802/main.py", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
NameError: name 'sqtr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:21:42) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
dano = int(f)
print(vida - dano)
-- EXECUTION TIME:
0.145017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1802/main.py", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
NameError: name 'sqtr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:21:42) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
dano = int(f)
print(vida - dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2//3))
NameError: name 'sqtr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:21:57) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2/3))
dano = int(f)
print(vida - dano)
-- EXECUTION TIME:
0.166608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1802/main.py", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2/3))
NameError: name 'sqtr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:22:34) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2 / 3))
dano = int(f)
print(vida - dano)
-- EXECUTION TIME:
0.270483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1802/main.py", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2 / 3))
NameError: name 'sqtr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:22:35) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2 / 3))
dano = int(f)
print(vida - dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2 / 3))
NameError: name 'sqtr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:22:40) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2 / 3))
dano = int(f)
print(vida - dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2 / 3))
NameError: name 'sqtr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:23:24) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

var = abs(sqtr( 5 * d1 ) + pi ** (d2 / 3))
dano = int(f)
print(vida - dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = abs(sqtr( 5 * d1 ) + pi ** (d2 / 3))
NameError: name 'sqtr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:23:45) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqrt( 5 * d1 ) + pi ** (d2 / 3))
dano = int(f)
print(vida - dano)
-- EXECUTION TIME:
0.187896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1802/main.py", line 5, in <module>
    f = abs(sqrt( 5 * d1 ) + pi ** (d2 / 3))
NameError: name 'sqrt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:25:18) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqrt(5*d1) + pi ** (d2/3))
dano = int(f)
print(vida - dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = abs(sqrt(5*d1) + pi ** (d2/3))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 00:27:06) 
-- CODE:
vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqtr( 5 * d1 ) + pi ** (d2/3))
dano = int (f)
print(vida - dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    f = abs(sqtr( 5 * d1 ) + pi ** (d2/3))
NameError: name 'sqtr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 00:27:50) 
-- CODE:
from math import *

vida = int(input("Vida dos monstros: "))
d1 = int(input("Valor do dado 1: "))
d2 = int(input("Valor do dado 2: "))

f = abs(sqrt( 5 * d1 ) + pi ** (d2/3))
dano = int (f)
print(vida - dano)
-- EXECUTION TIME:
0.181113
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:09:51) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = (abs(sprt(5 * D1)) + pi * (D2/3))
# Saida
print(int(dano))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    dano = (abs(sprt(5 * D1)) + pi * (D2/3))
NameError: name 'sprt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:10:22) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = (abs(sprt(5 * D1)) + (pi * (D2/3))
# Saida
print(int(dano))
-- ERROR:
File "XXXX", line 10
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:11:05) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = (abs(sprt(5 * D1)) + (pi * (D2/3))
# Saida
print(dano)
-- ERROR:
File "XXXX", line 10
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:11:22) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = (abs(sprt(5 * D1)) + (pi * (D2/3))
# Saida
print(dano)
-- ERROR:
File "XXXX", line 10
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:11:46) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = (abs(sprt(5 * D1) + (pi * (D2/3))
# Saida
print(dano)
-- ERROR:
File "XXXX", line 10
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:12:39) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = (abs(sprt(5 * D1) + (pi * (D2/3))
dano = int(f)
# Saida
print(dano)
-- ERROR:
File "XXXX", line 9
    dano = int(f)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:13:17) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs((sprt(5 * D1) + (pi * (D2/3)))
dano = int(f)
# Saida
print(dano)
-- ERROR:
File "XXXX", line 9
    dano = int(f)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:14:31) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs(sprt(5 * D1) + (pi * (D2/3)))
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f = abs(sprt(5 * D1) + (pi * (D2/3)))
NameError: name 'sprt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:14:45) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs
print(f)
-- OUTPUT:
<built-in function abs>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:17:02) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi * (D2 / 3)))
print(dano)
-- ERROR:
File "XXXX", line 9
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:17:14) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs((sqrt(5 * D1)) + (pi * (D2 / 3)))
print(dano)
-- ERROR:
File "XXXX", line 9
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:17:56) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
print(dano)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:18:08) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
print(dano)
-- EXECUTION TIME:
0.20805
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
8
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
11
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:22:32) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
dano = int(f)
# Saida
print(dano)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:22:54) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = (abs(sqrt(5 * D1) + (pi*(D2 / 3))))
dano = int(f)
# Saida
print(dano)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:23:01) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = (abs(sqrt(5 * D1) + (pi*(D2 / 3))))
dano = int(f)
# Saida
print(dano)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:23:26) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3)))) - PV
# Saida
print(dano)
-- OUTPUT:
-192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:24:05) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(PV - (sqrt(5 * D1) + (pi*(D2 / 3)))))
# Saida
print(dano)
-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:24:35) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(PV - dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:25:36) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:25:41) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- EXECUTION TIME:
0.1534
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:26:12) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- EXECUTION TIME:
0.184432
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:26:13) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- EXECUTION TIME:
0.323616
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:26:13) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- EXECUTION TIME:
0.165876
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
192
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
289
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:26:14) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- EXECUTION TIME:
0.215129
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:

-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:26:14) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- EXECUTION TIME:
0.366629
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
289
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
497
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:08:26) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- EXECUTION TIME:
0.182865
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:08:35) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- EXECUTION TIME:
0.163759
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:15:34) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
restPV = PV - dano
# Saida
print(restPV)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:16:55) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(restPV)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(restPV)
NameError: name 'restPV' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:17:07) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(dano)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:18:00) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("Pontos de Vida: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = 90 - int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(dano)
-- OUTPUT:
82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:18:57) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(90 - abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(dano)
-- OUTPUT:
81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:19:12) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(90 - (abs(sqrt(5 * D1) + (pi*(D2 / 3)))))
# Saida
print(dano)
-- OUTPUT:
81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:20:19) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(PV - abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(dano)
-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:20:39) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano =PV - int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:20:52) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = PV - int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(dano)
-- EXECUTION TIME:
0.210876
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:20:58) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = PV - int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(dano)
-- EXECUTION TIME:
0.129445
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:20:58) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = PV - int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(dano)
-- EXECUTION TIME:
0.189941
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:20:59) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = PV - int(abs(sqrt(5 * D1) + (pi*(D2 / 3))))
# Saida
print(dano)
-- EXECUTION TIME:
0.152517
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:21:32) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs(sqrt(5 * D1) + (pi*(D2 / 3)))
dano = int(f) - PV
# Saida
print(dano)
-- OUTPUT:
-192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:22:09) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs(sqrt(5 * D1) + (pi*(D2 / 3)))
dano = (int(f) - PV) * 1
# Saida
print(dano)
-- OUTPUT:
-192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:23:28) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3)) - PV))
# Saida
print(dano)
-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:23:51) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
dano = int(abs(sqrt(5 * D1) + (pi*(D2 / 3))) - PV)
# Saida
print(dano)
-- OUTPUT:
-191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:24:47) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs(sqrt(5 * D1) + (pi*(D2 / 3)))
dano = PV - int(f)
# Saida
print(dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:24:53) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs(sqrt(5 * D1) + (pi*(D2 / 3)))
dano = PV - int(f)
# Saida
print(dano)
-- EXECUTION TIME:
0.17964
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:24:56) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs(sqrt(5 * D1) + (pi*(D2 / 3)))
dano = PV - int(f)
# Saida
print(dano)
-- EXECUTION TIME:
0.146233
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:24:56) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs(sqrt(5 * D1) + (pi*(D2 / 3)))
dano = PV - int(f)
# Saida
print(dano)
-- EXECUTION TIME:
0.117786
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
192
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:24:56) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs(sqrt(5 * D1) + (pi*(D2 / 3)))
dano = PV - int(f)
# Saida
print(dano)
-- EXECUTION TIME:
0.136333
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
192
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:24:57) 
-- CODE:
# Modulo Math
from math import *
# Entradas
PV = int(input("PV: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))
# Variavel
f = abs(sqrt(5 * D1) + (pi*(D2 / 3)))
dano = PV - int(f)
# Saida
print(dano)
-- EXECUTION TIME:
0.119768
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
